# function_dispatcher

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  SECURITY.md  dependencies.spdx  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: CODEOWNERS  black_duck.yml  ci.yml  doxygen.yml
benchmark/: CMakeLists.txt  benchmark.cpp  client.cpp  custom_benchmark.cpp  main.cpp  normal_server.cpp
cmake/: dependencies.cmake  event_dispatcher-config.cmake.in  install.cmake
docs/: Doxyfile  conf.py  index.rst
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_static/: custom.css
docs/latex/: _2home_2bsouchu_2repos_2function_dispatcher_2include_2dispatcher_8hpp-example.tex  annotated.tex  classdispatcher_1_1Timer.tex  examples.tex  refman.tex
docs/xml/: _2home_2bsouchu_2repos_2function_dispatcher_2include_2dispatcher_8hpp-example.xml  classdispatcher_1_1InSequence.xml  classdispatcher_1_1NoHandler.xml  classdispatcher_1_1Test.xml  classdispatcher_1_1Timer.xml  classdispatcher_1_1internal_1_1CallExpectationBuilder.xml  classdispatcher_1_1internal_1_1CallExpecter.xml  classdispatcher_1_1internal_1_1CustomStackAllocator.xml  classdispatcher_1_1internal_1_1EventExpectationBuilder.xml  classdispatcher_1_1internal_1_1EventExpecter.xml  classdispatcher_1_1internal_1_1EventLoop.xml  classdispatcher_1_1internal_1_1ExpecterBase.xml  classdispatcher_1_1internal_1_1MemoryPool.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dispatcher_8hpp.xml  dispatcher__test_8hpp.xml  index.xml  namespacedispatcher.xml  namespacedispatcher_1_1internal.xml  structdispatcher_1_1internal_1_1AnythingMatcher.xml  structdispatcher_1_1internal_1_1CallExpecter_1_1ArgsFromTuple.xml  structdispatcher_1_1internal_1_1CallExpecter_1_1ArgsFromTuple_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.xml  structdispatcher_1_1internal_1_1Default.xml  structdispatcher_1_1internal_1_1DefaultExpectationBuilder.xml  structdispatcher_1_1internal_1_1EventDispatcher.xml  structdispatcher_1_1internal_1_1EventExpecter_1_1ArgsFromTuple.xml  structdispatcher_1_1internal_1_1EventExpecter_1_1ArgsFromTuple_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.xml  structdispatcher_1_1internal_1_1Expectation.xml  structdispatcher_1_1internal_1_1ExpecterContainer.xml  structdispatcher_1_1internal_1_1FunctionDispatcher.xml  structdispatcher_1_1internal_1_1FunctionFromTuple.xml  structdispatcher_1_1internal_1_1FunctionFromTuple_3_01ReturnType_00_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.xml  structdispatcher_1_1internal_1_1Matcher.xml  structdispatcher_1_1internal_1_1MockableClock.xml  structdispatcher_1_1internal_1_1ReturnTypeFromCallable.xml  structdispatcher_1_1internal_1_1ReturnTypeFromCallable_3_01Callable_00_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.xml  structdispatcher_1_1internal_1_1Sequence.xml  structdispatcher_1_1internal_1_1SignalFromTuple.xml  structdispatcher_1_1internal_1_1SignalFromTuple_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.xml  structdispatcher_1_1internal_1_1ToMatcher.xml  (+9 more)
example/: CMakeLists.txt  async_call.cpp  complex_type.cpp  detaching.cpp  events.cpp  expect.cpp  hello_world.cpp  reference.cpp  safety.cpp  same_signature.cpp  timer.cpp  two_objects.cpp
include/: dispatcher-cpp14.hpp  dispatcher.hpp  dispatcher_test.hpp  event_dispatcher.hpp  event_dispatcher_2.hpp  function_dispatcher.hpp
src/: dispatcher.cpp  dispatcher.hpp  dispatcher_test.hpp
test/: CMakeLists.txt  dispatcher_test.cpp  main.cpp
